@@ -1,3 +1,6 @@
+Mar 16, 2008 - chris
+o minor documentation fixes (mainly grammar releated) in ham/hamsterdb.h
+
 Mar 09, 2008 - chris ---------------------------------------------------
                       release of hamsterdb-1.0.1
 
